BusOne/src/objects/Stakeholder_Publication_vod__c.object
<CustomObject>
    <description>Publication participation information</description>
    <fields>
        <fullName>Account_Id_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Account</description>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Publications</relationshipLabel>
        <relationshipName>Account_Publications_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorship_Position_vod__c</fullName>
        <description>Picklist of authorship positions.</description>
        <label>Authorship Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Last_Author_vod</fullName>
                </value>
                <value>
                    <fullName>Coauthor_vod</fullName>
                </value>
                <value>
                    <fullName>Author_vod</fullName>
                </value>
                <value>
                    <fullName>Collaborator_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Participant_vod__c</fullName>
        <description>User associated with Publication</description>
        <label>Participant</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_ID_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>External ID</description>
        <label>Publication ID</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Account Publications</relationshipLabel>
        <relationshipName>Account_Publications_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Publication</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Account Publication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Publications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>